--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "debug": "^4.0.1",
     "electron-installer-common": "^0.5.0",
     "fs-extra": "^7.0.0",
-    "get-folder-size": "^2.0.0",
+    "get-folder-size": "git+https://git@github.com/leboff/get-folder-size.git",
     "lodash": "^4.17.4",
     "pify": "^4.0.0",
     "semver": "^5.4.1",
